# dagster-gitlab

./: Makefile  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/dagster_gitlab/: __init__.py  clients.py  protocols.py  resources.py
src/dagster_gitlab/clients/: _graphql.py  _rest.py
tests/: test_hello.py
